--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "bulma-carousel": "^4.0.4",
     "dotenv": "^8.0.0",
-    "express": "^4.17.0",
+    "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.8.6"
+    "path": "^0.12.7",
+    "sequelize": "^5.12.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
